# rust-experiments

./: .gitignore  .travis.yml  Cargo.toml  README.md  README.md.template
scripts/: build_kcov.sh  pre-commit  run_tests.sh  send_kcov.sh  update_readme.sh
src/: lib.rs  main.rs
src/algorithms/: binary_search.rs  bubble_sort.rs  insertion_sort.rs  max_subarray.rs  merge_sort.rs  mod.rs  quick_sort.rs  substring_find.rs  substring_match.rs
src/algs/: binary_search.rs  bubble_sort.rs  insertion_sort.rs  merge_sort.rs  mod.rs
src/cli/: head.rs  mod.rs  tail.rs  wc.rs  wget.rs
src/encoding/: base64.rs  bitreader.rs  bitwriter.rs  crc.rs  huffman.rs  huffman_decoder.rs  huffman_encoder.rs  huffman_tests.rs  mod.rs  unicode.rs
src/format/: mod.rs
src/interpreters/: brainfuck.rs  mod.rs
src/structs/: bigint.rs  binary_tree.rs  bitset.rs  bitset_iterators.rs  complex.rs  list.rs  list_iterators.rs  list_mut.rs  list_mut_iterators.rs  max_heap.rs  mod.rs  ring_buffer.rs
src/terminal/: mod.rs
tests/: bitreader_bitwriter.rs
